--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.3
   qr_code_scanner: ^1.0.1
   shared_preferences: ^2.2.3
+  showcaseview: ^3.0.0
   syncfusion_flutter_xlsio: ^25.1.40
 
 dev_dependencies:
